--- a/src/app/components/cheffs/cheffs.page.html
+++ b/src/app/components/cheffs/cheffs.page.html
@@ -15,6 +15,7 @@
       <ion-title size="large">menu</ion-title>
     </ion-toolbar>
   </ion-header> -->
+  <div class="bg-orange">
 <div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -334,6 +335,6 @@
             </div>
             </div>
 
-
-  <div class="bg bg-orange"></div>
+</div>
+  
 </ion-content>
