--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -3,9 +3,7 @@
 
 <ion-content [fullscreen]="true">
   
-
-  <div class="bg-orange">
-   <div class="wrapper" >
+   <div class="wrapper bg-orange" >
     <div class="login-box">
       <div class="login-header">
         <!-- <span>Login</span> -->
@@ -31,10 +29,8 @@
 
   </div>
   
-  
-</div>
 
-<div class="bg bg-orange"></div>
+
 
 
 </ion-content>
