--- a/src/app/components/orderconfirm/orderconfirm.page.html
+++ b/src/app/components/orderconfirm/orderconfirm.page.html
@@ -12,7 +12,7 @@
   </ion-header>
 
   
-  <div class="payment-section">
+  <div class="payment-section bg-orange">
 <div id="wrapper" class="payment">
   <div class="payment-card">
     <div class="payment-icon">
