--- a/src/app/components/ourservice/ourservice.page.html
+++ b/src/app/components/ourservice/ourservice.page.html
@@ -50,13 +50,161 @@
             <div class="image-area">
               <a href="#">
                 <img
+                  src="https://t3.ftcdn.net/jpg/08/05/46/82/360_F_805468232_uk7DTUTx5i2sAiGfn1Dckj2SIXodpwYA.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                Catering Services
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://www.naturalremedy.com/wp-content/uploads/2025/04/ChatGPT_Image_Apr_28_2025_09_21_00_AM_optimized_1000.png"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                poultry Form
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/haldi-decoration-wedding-hall-decorations-sofa-flowers_143921-1147.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                Haldi Ceremony
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
                   src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
                   alt="">
               </a>
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                cooking dishes
+                shamiyana tent
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://t3.ftcdn.net/jpg/08/05/46/82/360_F_805468232_uk7DTUTx5i2sAiGfn1Dckj2SIXodpwYA.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                Catering Services
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://www.naturalremedy.com/wp-content/uploads/2025/04/ChatGPT_Image_Apr_28_2025_09_21_00_AM_optimized_1000.png"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                poultry Form
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/haldi-decoration-wedding-hall-decorations-sofa-flowers_143921-1147.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                Haldi Ceremony
               </p>
 
             </div>
@@ -99,13 +247,13 @@
             <div class="image-area">
               <a href="#">
                 <img
-                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  src="https://t3.ftcdn.net/jpg/08/05/46/82/360_F_805468232_uk7DTUTx5i2sAiGfn1Dckj2SIXodpwYA.jpg"
                   alt="">
               </a>
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                cooking dishes
+                Catering Services
               </p>
 
             </div>
@@ -123,13 +271,13 @@
             <div class="image-area">
               <a href="#">
                 <img
-                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  src="https://www.naturalremedy.com/wp-content/uploads/2025/04/ChatGPT_Image_Apr_28_2025_09_21_00_AM_optimized_1000.png"
                   alt="">
               </a>
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                shamiyana tent
+                poultry Form
               </p>
 
             </div>
@@ -148,62 +296,13 @@
             <div class="image-area">
               <a href="#">
                 <img
-                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  src="https://img.freepik.com/premium-photo/haldi-decoration-wedding-hall-decorations-sofa-flowers_143921-1147.jpg"
                   alt="">
               </a>
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                cooking dishes
-              </p>
-
-            </div>
-          </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
-            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1 17L17 1H7.8" stroke="white"></path>
-            </svg>
-          </a>
-        </div>
-      </div>
-      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
-        <div class="Product-Card">
-          <div class="card-inner" >
-            <div class="image-area">
-              <a href="#">
-                <img
-                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
-                  alt="">
-              </a>
-            </div>
-            <div class="blog-content">
-              <p class="tag color-two">
-                shamiyana tent
-              </p>
-
-            </div>
-          </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
-            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1 17L17 1H7.8" stroke="white"></path>
-            </svg>
-          </a>
-        </div>
-      </div>
-
-      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
-        <div class="Product-Card">
-          <div class="card-inner">
-            <div class="image-area">
-              <a href="#">
-                <img
-                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
-                  alt="">
-              </a>
-            </div>
-            <div class="blog-content">
-              <p class="tag color-two">
-                cooking dishes
+                Haldi Ceremony
               </p>
 
             </div>
@@ -226,7 +325,7 @@
   </section>
  
 
-  <div class="bg bg-orange"></div>
+  
 
 
   
