--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </section>
-
+<div class="bg-orange">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -133,8 +133,8 @@
 					</div>
 				</div>
 			</div>
+</div>
 
-
-  <div class="bg bg-orange"></div>
+  
   <!-- Select Event Menu End -->
 </ion-content>
