--- a/src/app/components/cheffs/cheffs.page.html
+++ b/src/app/components/cheffs/cheffs.page.html
@@ -326,8 +326,9 @@
 
       </div>
       
-      <div class="next-btn px-5 py-3">
-        <a  class="Bhagona-Btn float-end" >Continue <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+      <div class="next-btn md:px-5 py-3">
+        <a  class="Bhagona-Btn float-start" >Cart <i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+        <a  class="Bhagona-Btn float-end">Continue <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
       </div>
     </div>
 </section>
