--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
       <div class="logo-container">
         <img src="../../../assets/home-logo.png" style="width: 145px;">
       </div>
-
+      
       <div class="nav-btn">
         <div class="nav-links">
           <ul>
@@ -36,13 +36,16 @@
               <a href="#">Chef</a>
             </li>
             <li class="nav-link" style="--i: .6s">
+              <a href="#">Services</a>
+            </li>
+            <li class="nav-link" style="--i: .6s">
               <a href="#">menu</a>
             </li>
             
           </ul>
         </div>
         
-        <div class="log-sign" style="--i: 1.8s">
+        <div class="log-sign desktop" style="--i: 1.8s">
           <span class="fa-stack fa-2x has-badge" data-count="5">
   <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
   <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
@@ -51,6 +54,12 @@
       </div>
 
       <div class="hamburger-menu-container">
+        <div class="log-sign mobile" style="--i: 1.8s">
+          <span class="fa-stack fa-2x has-badge" data-count="5">
+  <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+  <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
+</span>
+        </div>
         <div class="hamburger-menu">
           <div></div>
         </div>
@@ -125,7 +134,7 @@
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                <img src="https://cdn-icons-png.flaticon.com/512/13140/13140726.png">
+                
                 <span>Marriage </span>
               </p>
 
@@ -151,7 +160,7 @@
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                <img src="https://icon-library.com/images/baby-shower-icon/baby-shower-icon-0.jpg">
+                
                 <span>Baby Shower </span>
               </p>
 
@@ -174,7 +183,7 @@
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                <img src="https://cdn-icons-png.flaticon.com/512/13140/13140726.png">
+               
                 <span>Engagement </span>
               </p>
 
@@ -199,7 +208,7 @@
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                <img src="https://www.freeiconspng.com/uploads/birthday-cake-icon-1.png">
+               
                 <span>Birthday </span>
               </p>
 
@@ -224,7 +233,7 @@
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                <img src="https://www.freeiconspng.com/uploads/birthday-cake-icon-1.png">
+               
                 <span>Puberty Ceremony </span>
               </p>
 
@@ -249,7 +258,7 @@
             </div>
             <div class="blog-content">
               <p class="tag color-two">
-                <img src="https://www.freeiconspng.com/uploads/birthday-cake-icon-1.png">
+               
                 <span>Funeral </span>
               </p>
 
