--- a/src/global.scss
+++ b/src/global.scss
@@ -143,7 +143,7 @@
     height: 50px;
     line-height: 65px;
     border: 5px solid #fff;
-    background-image: linear-gradient(to right, #ff4438 0%, #ffbe36 50%, #ff4438 100%);
+    background-image: linear-gradient(to right, #ff4438 0%, #f6ba3d 50%, #ff4438 100%);
     background-size: 200% auto;
     border-radius: 50%;
     position: absolute;
@@ -453,7 +453,7 @@
     line-height: 1em;
     color: #ffffff;
     text-transform: capitalize;
-    background-image: linear-gradient(to right, #ff4438 0%, #ffbe36 50%, #ff4438 100%);
+    background-image: linear-gradient(to right, #ff4438 0%, #f6ba3d 50%, #ff4438 100%);
     background-size: 200% auto;
     padding: 12px 30px;
     border-radius: 10px;
@@ -670,6 +670,9 @@ a {
   }
   .login-box {
     padding: 7.5em 1.5em 4em 2.5em;
+  }
+  .menu-list{
+    padding: 20px 0 !important;
   }
 }
 
