--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,21 +27,23 @@
         <div class="nav-links">
           <ul>
             <li class="nav-link" style="--i: .6s">
-              <a href="#">Home</a>
+              <a >Home</a>
             </li>
             <li class="nav-link" style="--i: .6s">
-              <a href="#">About Us</a>
+              <a >About Us</a>
             </li>
             <li class="nav-link" style="--i: .6s">
-              <a href="#">Chef</a>
+              <a >Chef</a>
             </li>
             <li class="nav-link" style="--i: .6s">
-              <a href="#">Services</a>
+              <a >Services</a>
             </li>
             <li class="nav-link" style="--i: .6s">
-              <a href="#">menu</a>
+              <a >menu</a>
             </li>
-            
+            <li class="nav-link" style="--i: .6s" (click)="logout()">
+              <a >Logout</a>
+            </li>
           </ul>
         </div>
         
@@ -126,7 +128,7 @@
         <div class="Product-Card">
           <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
-              <a href="#">
+              <a >
                 <img
                   src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
                   alt="">
@@ -140,7 +142,7 @@
 
             </div>
           </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
+          <a  class="blog-btn rounded-button bg-two">
             <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 17L17 1H7.8" stroke="white"></path>
             </svg>
@@ -152,7 +154,7 @@
         <div class="Product-Card">
           <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
-              <a href="#">
+              <a >
                 <img
                   src="https://img.freepik.com/free-psd/3d-blue-pink-gender-reveal-podium-with-toys_23-2150816968.jpg?semt=ais_hybrid&w=740"
                   alt="">
@@ -166,7 +168,7 @@
 
             </div>
           </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
+          <a  class="blog-btn rounded-button bg-two">
             <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 17L17 1H7.8" stroke="white"></path>
             </svg>
@@ -177,7 +179,7 @@
         <div class="Product-Card">
           <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
-              <a href="#">
+              <a >
                 <img src="https://img.freepik.com/premium-photo/engaged-couple-with-rings_908985-39841.jpg" alt="">
               </a>
             </div>
@@ -189,7 +191,7 @@
 
             </div>
           </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
+          <a  class="blog-btn rounded-button bg-two">
             <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 17L17 1H7.8" stroke="white"></path>
             </svg>
@@ -200,7 +202,7 @@
         <div class="Product-Card">
           <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
-              <a href="#">
+              <a >
                 <img
                   src="https://img.freepik.com/premium-photo/happy-birthday-background-wallpaper-illustration_492154-7372.jpg"
                   alt="">
@@ -214,7 +216,7 @@
 
             </div>
           </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
+          <a  class="blog-btn rounded-button bg-two">
             <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 17L17 1H7.8" stroke="white"></path>
             </svg>
@@ -225,7 +227,7 @@
         <div class="Product-Card">
           <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
-              <a href="#">
+              <a >
                 <img
                   src="https://koala.sh/api/image/v2-ggrb4-uzcpp.jpg?width=1216&height=832&dream"
                   alt="">
@@ -239,7 +241,7 @@
 
             </div>
           </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
+          <a  class="blog-btn rounded-button bg-two">
             <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 17L17 1H7.8" stroke="white"></path>
             </svg>
@@ -250,7 +252,7 @@
         <div class="Product-Card">
           <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
-              <a href="#">
+              <a >
                 <img
                   src="https://img.freepik.com/premium-photo/funeral-service-group-men-carrying-casket_921860-82546.jpg?w=360"
                   alt="">
@@ -264,7 +266,7 @@
 
             </div>
           </div>
-          <a href="#" class="blog-btn rounded-button bg-two">
+          <a  class="blog-btn rounded-button bg-two">
             <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 17L17 1H7.8" stroke="white"></path>
             </svg>
@@ -324,7 +326,7 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 text-center">
                         <div class="copyright-text">
-                            <p>Copyright &copy; 2025, All Right Reserved <a href="#">Bhagona</a></p>
+                            <p>Copyright &copy; 2025, All Right Reserved <a >Bhagona</a></p>
                         </div>
                     </div>
                     
