--- a/src/global.scss
+++ b/src/global.scss
@@ -66,6 +66,7 @@
 
 .bg-orange,#background-content{
   background: linear-gradient(to right, #FDDE90, #F77524) !important;
+  height: -webkit-fill-available;
   
  
 }
