--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -4,8 +4,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>menu</ion-title>
+  <ion-toolbar class="text-center">
+    <ion-title>Menu</ion-title>
   </ion-toolbar>
 </ion-header>
 
