--- a/src/app/components/checkout/checkout.page.html
+++ b/src/app/components/checkout/checkout.page.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </section>
-<div class="bg-orange">
+<div >
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
