--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -30,7 +30,7 @@
       <ion-title size="large">menu</ion-title>
     </ion-toolbar>
   </ion-header> -->
-  <div class="bg-orange">
+  <div>
     <div class="container ">
       <div class="row">
         <div class="col-md-12">
