--- a/src/app/components/orderconfirm/orderconfirm.page.html
+++ b/src/app/components/orderconfirm/orderconfirm.page.html
@@ -1,16 +1,23 @@
-<ion-header [translucent]="true">
-  <ion-toolbar class="text-center">
-    <ion-title>Order Confirm</ion-title>
+<ion-header>
+  <ion-toolbar class="custom-toolbar">
+    <!-- Back Button -->
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+
+    <!-- Page Title -->
+    <ion-title class="custom-title">Order Confirm</ion-title>
+
+    <!-- Cart Button with Badge -->
+    <ion-buttons slot="end">
+      <span class="fa-stack fa-2x has-badge" data-count="5">
+  <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+  <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
+</span>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">orderconfirm</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
   
   <div class="payment-section bg-orange">
 <div id="wrapper" class="payment">
