--- a/src/global.scss
+++ b/src/global.scss
@@ -51,7 +51,7 @@
 }
 
 .products{
-  padding: 40px 0;
+  padding: 15px 0;
 }
 
 .bg{
@@ -64,12 +64,12 @@
   
 }
 
-.bg-orange,#background-content{
-  background: linear-gradient(to right, #FDDE90, #F77524) !important;
-  height: -webkit-fill-available;
+// .bg-orange,#background-content{
+//   background: linear-gradient(to right, #FDDE90, #F77524) !important;
+//   height: -webkit-fill-available;
   
  
-}
+// }
 .Product-Card {
     position: relative;
     z-index: 1;
@@ -77,7 +77,7 @@
 }
 .Product-Card .card-inner {
     padding: 20px 20px;
-    background: #ececec;
+    background: #fff0e3;
     clip-path: polygon(0% 9.276%, 0% 9.276%, 0.157% 7.772%, 0.613% 6.344%, 1.342% 5.013%, 2.319% 3.798%, 3.52% 2.717%, 4.921% 1.79%, 6.496% 1.035%, 8.22% 0.473%, 10.07% 0.121%, 12.019% 0%, 87.981% 0%, 87.981% 0%, 89.93% 0.121%, 91.78% 0.473%, 93.504% 1.035%, 95.079% 1.79%, 96.48% 2.717%, 97.681% 3.798%, 98.658% 5.013%, 99.387% 6.344%, 99.843% 7.772%, 100% 9.276%, 100% 82.629%, 100% 82.629%, 99.99% 82.925%, 99.959% 83.219%, 99.909% 83.511%, 99.839% 83.799%, 99.749% 84.085%, 99.64% 84.366%, 99.512% 84.643%, 99.364% 84.914%, 99.198% 85.18%, 99.014% 85.439%, 90.069% 97.244%, 90.069% 97.244%, 89.65% 97.736%, 89.171% 98.186%, 88.638% 98.592%, 88.057% 98.951%, 87.432% 99.262%, 86.77% 99.521%, 86.074% 99.727%, 85.351% 99.877%, 84.606% 99.969%, 83.844% 100%, 12.019% 100%, 12.019% 100%, 10.07% 99.879%, 8.22% 99.527%, 6.496% 98.965%, 4.921% 98.21%, 3.52% 97.283%, 2.319% 96.202%, 1.342% 94.987%, 0.613% 93.656%, 0.157% 92.228%, 0% 90.724%, 0% 9.276%);
 }
 .Product-Card .card-inner .image-area {
@@ -124,10 +124,10 @@
     gap: 10px;
     font-weight: 500;
     padding: 9px 22px 7px;
-    border: 1px solid #ff4438;
+    border: 1px solid #df7b4c;
     max-width: max-content;
     border-radius: 100px;
-    color: #ff4438;
+    color: #df7b4c;
     font-size: 14px;
     font-weight: 700;
     margin: 0 auto;
@@ -144,7 +144,7 @@
     height: 50px;
     line-height: 65px;
     border: 5px solid #fff;
-    background-image: linear-gradient(to right, #ff4438 0%, #f6ba3d 50%, #ff4438 100%);
+    background-image: linear-gradient(to right, #df7b4c 0%, #f6ba3d 50%, #df7b4c 100%);
     background-size: 200% auto;
     border-radius: 50%;
     position: absolute;
@@ -226,7 +226,7 @@
 }
 
 .option_item .checkbox:checked ~ .option_inner.facebook {
-  border-color: #585c68;
+  border-color: #df7b4c;
   color: #585c68;
 }
 
@@ -298,8 +298,8 @@
     margin-bottom: 15px !important;
 }
 .option_item .option_inner .tickmark{
-    top: 10px !important;
-    right: -15px !important;
+    top: 6px !important;
+    right: -10px !important;
 }
 .Menu-List .popular-inner-box .popular-inner-item .text h5{
     overflow: hidden !important;
@@ -319,7 +319,7 @@
 .Menu-List {
   display: flex;
   gap: 12px;
-  background-color: #fff;
+  background-color: #fff0e3;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
  border-radius: 12px;
@@ -403,7 +403,7 @@
   font-weight: 700;
   text-align: left;
   margin: 0 0 5px 0;
-  color: #ff4438;
+  color: #df7b4c;
 }
 .Menu-List .popular-inner-box .popular-inner-item {
   display: flex;
@@ -434,7 +434,7 @@
  }
  .title{    
   font-size:20px;
-  color: #ff3643;
+  color: #df7b4c;
   margin: 0;
   padding: 0 20px 20px 0px;
   font-weight: 700;
@@ -454,7 +454,7 @@
     line-height: 1em;
     color: #ffffff;
     text-transform: capitalize;
-    background: #ff4438;
+    background: #df7b4c;
     background-size: 200% auto;
     padding: 12px 30px;
     border-radius: 10px;
@@ -787,7 +787,7 @@ input[type="checkbox"] {
 .Event-Menu-List {
   display: flex;
   gap: 12px;
-  background-color: #fff;
+  background-color: #fff0e3;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
  border-radius: 12px;
@@ -1334,7 +1334,7 @@ button:hover {
   border-radius:999px;
   line-height:.75em;
   color: white;
-  color:#DF0000;
+  color:#df7b4c;
   text-align:center;
   min-width:2em;
   font-weight:bold;
@@ -1342,13 +1342,13 @@ button:hover {
   border-style:solid;
 }
 .custom-toolbar .fa-circle {
-  color:#DF0000;
+  color:#df7b4c;
 }
 .custom-toolbar .button-inner{
   color: #000 !important;
 }
 .custom-toolbar .red-cart {
-	color: #DF0000; background:#f7f7f7;
+	color: #df7b4c; background:#f7f7f7;
 }
 .custom-toolbar .fa-stack-2x {
     font-size: 1.35em !important;
