--- a/src/global.scss
+++ b/src/global.scss
@@ -77,8 +77,9 @@
 }
 .Product-Card .card-inner {
     padding: 20px 20px;
-    background: #fff0e3;
-    clip-path: polygon(0% 9.276%, 0% 9.276%, 0.157% 7.772%, 0.613% 6.344%, 1.342% 5.013%, 2.319% 3.798%, 3.52% 2.717%, 4.921% 1.79%, 6.496% 1.035%, 8.22% 0.473%, 10.07% 0.121%, 12.019% 0%, 87.981% 0%, 87.981% 0%, 89.93% 0.121%, 91.78% 0.473%, 93.504% 1.035%, 95.079% 1.79%, 96.48% 2.717%, 97.681% 3.798%, 98.658% 5.013%, 99.387% 6.344%, 99.843% 7.772%, 100% 9.276%, 100% 82.629%, 100% 82.629%, 99.99% 82.925%, 99.959% 83.219%, 99.909% 83.511%, 99.839% 83.799%, 99.749% 84.085%, 99.64% 84.366%, 99.512% 84.643%, 99.364% 84.914%, 99.198% 85.18%, 99.014% 85.439%, 90.069% 97.244%, 90.069% 97.244%, 89.65% 97.736%, 89.171% 98.186%, 88.638% 98.592%, 88.057% 98.951%, 87.432% 99.262%, 86.77% 99.521%, 86.074% 99.727%, 85.351% 99.877%, 84.606% 99.969%, 83.844% 100%, 12.019% 100%, 12.019% 100%, 10.07% 99.879%, 8.22% 99.527%, 6.496% 98.965%, 4.921% 98.21%, 3.52% 97.283%, 2.319% 96.202%, 1.342% 94.987%, 0.613% 93.656%, 0.157% 92.228%, 0% 90.724%, 0% 9.276%);
+    background: linear-gradient(180.2deg, #df7b4c -8.53%, #fff 109.43%);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    // clip-path: polygon(0% 9.276%, 0% 9.276%, 0.157% 7.772%, 0.613% 6.344%, 1.342% 5.013%, 2.319% 3.798%, 3.52% 2.717%, 4.921% 1.79%, 6.496% 1.035%, 8.22% 0.473%, 10.07% 0.121%, 12.019% 0%, 87.981% 0%, 87.981% 0%, 89.93% 0.121%, 91.78% 0.473%, 93.504% 1.035%, 95.079% 1.79%, 96.48% 2.717%, 97.681% 3.798%, 98.658% 5.013%, 99.387% 6.344%, 99.843% 7.772%, 100% 9.276%, 100% 82.629%, 100% 82.629%, 99.99% 82.925%, 99.959% 83.219%, 99.909% 83.511%, 99.839% 83.799%, 99.749% 84.085%, 99.64% 84.366%, 99.512% 84.643%, 99.364% 84.914%, 99.198% 85.18%, 99.014% 85.439%, 90.069% 97.244%, 90.069% 97.244%, 89.65% 97.736%, 89.171% 98.186%, 88.638% 98.592%, 88.057% 98.951%, 87.432% 99.262%, 86.77% 99.521%, 86.074% 99.727%, 85.351% 99.877%, 84.606% 99.969%, 83.844% 100%, 12.019% 100%, 12.019% 100%, 10.07% 99.879%, 8.22% 99.527%, 6.496% 98.965%, 4.921% 98.21%, 3.52% 97.283%, 2.319% 96.202%, 1.342% 94.987%, 0.613% 93.656%, 0.157% 92.228%, 0% 90.724%, 0% 9.276%);
 }
 .Product-Card .card-inner .image-area {
     overflow: hidden;
@@ -281,7 +282,8 @@
     height: 35px;
   }
   .Product-Card .card-inner{
-    padding: 12px;
+    padding: 10px;
+    border-radius: 20px;
   }
   .Product-Card .card-inner .blog-content{
     margin-top: 15px;
@@ -1355,3 +1357,4 @@ button:hover {
     top: 10px;
 
 }
+
