--- a/src/app/components/websitehome/websitehome.page.html
+++ b/src/app/components/websitehome/websitehome.page.html
@@ -11,3 +11,133 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+<div class="website-body">
+<!-- Featured Services Section -->
+<section id="featured-services" class="featured-services section">
+
+  <!-- Section Title -->
+  <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+    <h2>Featured Services</h2>
+  </div><!-- End Section Title -->
+
+  <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+
+    <div class="row gy-5">
+
+      <div class="col-xl-4 col-md-6">
+        <div class="service-item">
+          <div class="img">
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+              class="img-fluid" alt="">
+          </div>
+          <div class="details position-relative">
+
+            <a href="service-details.html" class="stretched-link">
+              <h3>Nesciunt Mete</h3>
+            </a>
+            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis.
+            </p>
+          </div>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-4 col-md-6">
+        <div class="service-item">
+          <div class="img">
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+              class="img-fluid" alt="">
+          </div>
+          <div class="details position-relative">
+
+            <a href="service-details.html" class="stretched-link">
+              <h3>Eosle Commodi</h3>
+            </a>
+            <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut
+              nesciunt dolorem.</p>
+          </div>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-4 col-md-6">
+        <div class="service-item">
+          <div class="img">
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+              class="img-fluid" alt="">
+          </div>
+          <div class="details position-relative">
+
+            <a href="service-details.html" class="stretched-link">
+              <h3>Ledo Markt</h3>
+            </a>
+            <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos
+              earum corrupti.</p>
+          </div>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-4 col-md-6">
+        <div class="service-item">
+          <div class="img">
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+              class="img-fluid" alt="">
+          </div>
+          <div class="details position-relative">
+
+            <a href="service-details.html" class="stretched-link">
+              <h3>Asperiores Commodit</h3>
+            </a>
+            <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
+              adipisci neque.</p>
+            <a href="service-details.html" class="stretched-link"></a>
+          </div>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-4 col-md-6">
+        <div class="service-item">
+          <div class="img">
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+              class="img-fluid" alt="">
+          </div>
+          <div class="details position-relative">
+
+            <a href="service-details.html" class="stretched-link">
+              <h3>Velit Doloremque</h3>
+            </a>
+            <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem
+              alias eius labore.</p>
+            <a href="service-details.html" class="stretched-link"></a>
+          </div>
+        </div>
+      </div><!-- End Service Item -->
+
+      <div class="col-xl-4 col-md-6">
+        <div class="service-item">
+          <div class="img">
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+              class="img-fluid" alt="">
+          </div>
+          <div class="details position-relative">
+
+            <a href="service-details.html" class="stretched-link">
+              <h3>Dolori Architecto</h3>
+            </a>
+            <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae
+              ducimus enim.</p>
+            <a href="service-details.html" class="stretched-link"></a>
+          </div>
+        </div>
+      </div><!-- End Service Item -->
+
+    </div>
+
+  </div>
+
+</section>
+</div>
