--- a/src/app/components/cheffs/cheffs.page.html
+++ b/src/app/components/cheffs/cheffs.page.html
@@ -30,7 +30,7 @@
     </ion-toolbar>
   </ion-header> -->
   <div >
-<div class="container">
+<div class="container bg-orange">
 				<div class="row">
 					<div class="col-md-12">
 
