--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -31,7 +31,7 @@
     </ion-toolbar>
   </ion-header> -->
   <div>
-    <div class="container ">
+    <div class="container bg-orange">
       <div class="row">
         <div class="col-md-12">
 
