--- a/src/app/components/menu/menu.page.scss
+++ b/src/app/components/menu/menu.page.scss
@@ -1,4 +1,4 @@
 .bg-orange {
-    background: linear-gradient(to right, #FDDE90, #F77524) !important;
+    background: #e4c815 !important;
     height: inherit;
 }
