--- a/src/app/components/orderconfirm/orderconfirm.page.scss
+++ b/src/app/components/orderconfirm/orderconfirm.page.scss
@@ -38,7 +38,7 @@ p {
   margin-bottom: 0.5rem;
   font-size: 24px;
   animation-delay: 1100ms;
-  color: #f77524;
+  color: #e4c815;
 }
 
 .payment-card p {
@@ -68,10 +68,10 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #f77524;
+  background: #e4c815;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset,
     0 1px 3px 0 rgba(24, 25, 22, 0.1), 0 1px 2px -1px rgba(24, 25, 22, 0.1);
-  border: 1px solid #f77524;
+  border: 1px solid #e4c815;
   color: #ffffff;
   font-size: 13px;
   font-weight: 500;
@@ -81,7 +81,7 @@ button {
   cursor: pointer;
 }
 button:hover {
-  background: #f77524;
+  background: #e4c815;
 }
 button:active {
   transform: scale(0.98);
@@ -168,7 +168,7 @@ Only the last payment-card should have a bottom-facing box-shadow.
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.03);
   font-family: "arial";
   font-size: 32px;
-  color: #f77524;
+  color: #e4c815;
 }
 
 .payment-card:not(:first-of-type) {
