--- a/src/global.scss
+++ b/src/global.scss
@@ -52,6 +52,7 @@
 
 .products{
   padding: 15px 0;
+  background: #e4c815;
 }
 
 .bg{
@@ -65,9 +66,8 @@
 }
 
 // .bg-orange,#background-content{
-//   background: linear-gradient(to right, #FDDE90, #F77524) !important;
-//   height: -webkit-fill-available;
-  
+//   background: linear-gradient(to right, #FDDE90, #e4c815) !important;
+//   height: -webkit-fill-available; 
  
 // }
 .Product-Card {
@@ -77,7 +77,8 @@
 }
 .Product-Card .card-inner {
     padding: 20px 20px;
-    background: linear-gradient(180.2deg, #df7b4c -8.53%, #fff 109.43%);
+    border-radius: 20px;
+    background: linear-gradient(180.2deg, #ffffdb -8.53%, #ffffdb 109.43%);
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     // clip-path: polygon(0% 9.276%, 0% 9.276%, 0.157% 7.772%, 0.613% 6.344%, 1.342% 5.013%, 2.319% 3.798%, 3.52% 2.717%, 4.921% 1.79%, 6.496% 1.035%, 8.22% 0.473%, 10.07% 0.121%, 12.019% 0%, 87.981% 0%, 87.981% 0%, 89.93% 0.121%, 91.78% 0.473%, 93.504% 1.035%, 95.079% 1.79%, 96.48% 2.717%, 97.681% 3.798%, 98.658% 5.013%, 99.387% 6.344%, 99.843% 7.772%, 100% 9.276%, 100% 82.629%, 100% 82.629%, 99.99% 82.925%, 99.959% 83.219%, 99.909% 83.511%, 99.839% 83.799%, 99.749% 84.085%, 99.64% 84.366%, 99.512% 84.643%, 99.364% 84.914%, 99.198% 85.18%, 99.014% 85.439%, 90.069% 97.244%, 90.069% 97.244%, 89.65% 97.736%, 89.171% 98.186%, 88.638% 98.592%, 88.057% 98.951%, 87.432% 99.262%, 86.77% 99.521%, 86.074% 99.727%, 85.351% 99.877%, 84.606% 99.969%, 83.844% 100%, 12.019% 100%, 12.019% 100%, 10.07% 99.879%, 8.22% 99.527%, 6.496% 98.965%, 4.921% 98.21%, 3.52% 97.283%, 2.319% 96.202%, 1.342% 94.987%, 0.613% 93.656%, 0.157% 92.228%, 0% 90.724%, 0% 9.276%);
 }
@@ -125,10 +126,10 @@
     gap: 10px;
     font-weight: 500;
     padding: 9px 22px 7px;
-    border: 1px solid #df7b4c;
+    border: 1px solid #00000061;
     max-width: max-content;
     border-radius: 100px;
-    color: #df7b4c;
+    color: #000;
     font-size: 14px;
     font-weight: 700;
     margin: 0 auto;
@@ -145,7 +146,7 @@
     height: 50px;
     line-height: 65px;
     border: 5px solid #fff;
-    background-image: linear-gradient(to right, #df7b4c 0%, #f6ba3d 50%, #df7b4c 100%);
+    background-image: linear-gradient(to right, #e4c815 0%, #f6ba3d 50%, #e4c815 100%);
     background-size: 200% auto;
     border-radius: 50%;
     position: absolute;
@@ -227,7 +228,7 @@
 }
 
 .option_item .checkbox:checked ~ .option_inner.facebook {
-  border-color: #df7b4c;
+  border-color: #e4c815;
   color: #585c68;
 }
 
@@ -321,7 +322,7 @@
 .Menu-List {
   display: flex;
   gap: 12px;
-  background-color: #fff0e3;
+  background-color: #ffffdb;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
  border-radius: 12px;
@@ -405,7 +406,7 @@
   font-weight: 700;
   text-align: left;
   margin: 0 0 5px 0;
-  color: #df7b4c;
+  color: #000;
 }
 .Menu-List .popular-inner-box .popular-inner-item {
   display: flex;
@@ -436,7 +437,7 @@
  }
  .title{    
   font-size:20px;
-  color: #df7b4c;
+  color: #e4c815;
   margin: 0;
   padding: 0 20px 20px 0px;
   font-weight: 700;
@@ -456,7 +457,7 @@
     line-height: 1em;
     color: #ffffff;
     text-transform: capitalize;
-    background: #df7b4c;
+    background: #e4c815;
     background-size: 200% auto;
     padding: 12px 30px;
     border-radius: 10px;
@@ -519,7 +520,7 @@ margin: auto;
 .login-box {
   position: relative;
   width: 450px;
-  border: 3px solid #F77524;
+  border: 3px solid #e4c815;
   border-radius: 15px;
   padding: 7.5em 2.5em 4em 2.5em;
   background-color: #ffffff;
@@ -535,7 +536,7 @@ margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #F77524;
+  background-color: #e4c815;
   width: 150px;
   height: 80px;
   border-radius: 0 0 20px 20px;
@@ -559,7 +560,7 @@ margin: auto;
   height: 30px;
   border-top-right-radius: 50%;
   background: transparent;
-  box-shadow: 15px 0 0 0 #F77524;
+  box-shadow: 15px 0 0 0 #e4c815;
 }
 
 .login-header::after {
@@ -571,7 +572,7 @@ margin: auto;
   height: 30px;
   border-top-left-radius: 50%;
   background: transparent;
-  box-shadow: -15px 0 0 0 #F77524;
+  box-shadow: -15px 0 0 0 #e4c815;
 }
 
 .input_box {
@@ -588,7 +589,7 @@ margin: auto;
   background: transparent;
   color: #000000;
   padding-inline: 20px 50px;
-  border: 2px solid #F77524;
+  border: 2px solid #e4c815;
   border-radius: 30px;
   outline: none;
 }
@@ -610,7 +611,7 @@ margin: auto;
   top: -10px;
   left: 20px;
   font-size: 14px;
-  background-color: #F77524;
+  background-color: #e4c815;
   border-radius: 30px;
   color: #fff;
   padding: 3px 10px;
@@ -641,7 +642,7 @@ margin: auto;
 .input-submit {
   width: 100%;
   height: 35px;
-  background: #F77524;
+  background: #e4c815;
   font-size: 16px;
   font-weight: 500;
   border: none;
@@ -664,7 +665,7 @@ margin: auto;
 }
 
 a {
-  color: #F77524;
+  color: #e4c815;
 }
 
 @media only screen and (max-width: 564px) {
@@ -917,7 +918,7 @@ input[type="checkbox"] {
     color: #555;
     background-color: #fff;
     background-image: none;
-    border: 1px solid #F77524;
+    border: 1px solid #e4c815;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -998,19 +999,19 @@ button:hover {
     height: 0;
     z-index: 99;
     border-left: 20px solid transparent;
-    border-right: 30px solid #F77524;
-    border-bottom: 34px solid #F77524;
+    border-right: 30px solid #e4c815;
+    border-bottom: 34px solid #e4c815;
     transition: all 0.15s ease-in-out;
 
 }
 .form-control:focus{
-    border-color: #F77524;
+    border-color: #e4c815;
     // box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(30, 102, 195);
 }
 .relative input:focus + i.fa{
     border-left: 20px solid transparent;
-    border-right: 30px solid #F77524;
-    border-bottom: 34px solid #F77524;
+    border-right: 30px solid #e4c815;
+    border-bottom: 34px solid #e4c815;
 }
 .relative input:focus + i.fa:before{
     color: #fff;
@@ -1069,9 +1070,9 @@ button:hover {
     color:#ff5501;
 }
 .movebtnsu {
-    border: 2px solid #F77524;
-    box-shadow: inset 0 0 0 0 #F77524;
-    color: #F77524;
+    border: 2px solid #e4c815;
+    box-shadow: inset 0 0 0 0 #e4c815;
+    color: #e4c815;
 }
 .movebtnre:focus,
 .movebtnre:hover,
@@ -1086,8 +1087,8 @@ button:hover {
 .movebtnsu:active {
     background-color: transparent;
     color: #FFF;
-    border-color: #F77524;
-    box-shadow: inset 96px 0 0 0 #F77524;
+    border-color: #e4c815;
+    box-shadow: inset 96px 0 0 0 #e4c815;
 }
 
 
@@ -1336,7 +1337,7 @@ button:hover {
   border-radius:999px;
   line-height:.75em;
   color: white;
-  color:#df7b4c;
+  color:#e4c815;
   text-align:center;
   min-width:2em;
   font-weight:bold;
@@ -1344,13 +1345,13 @@ button:hover {
   border-style:solid;
 }
 .custom-toolbar .fa-circle {
-  color:#df7b4c;
+  color:#e4c815;
 }
 .custom-toolbar .button-inner{
   color: #000 !important;
 }
 .custom-toolbar .red-cart {
-	color: #df7b4c; background:#f7f7f7;
+	color: #e4c815; background:#f7f7f7;
 }
 .custom-toolbar .fa-stack-2x {
     font-size: 1.35em !important;
@@ -1358,3 +1359,7 @@ button:hover {
 
 }
 
+body,.bg-orange,.ion-page{
+  background: #e4c815;
+  height: 100%;
+}
